tests/ui/layout/reprc-power-alignment.stderr
error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:15:1
   |
LL | pub struct Floats {
   | ^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:23:1
   |
LL | pub struct Floats2 {
   | ^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:31:1
   |
LL | pub struct Floats3 {
   | ^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:39:1
   |
LL | pub struct Floats4 {
   | ^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:47:1
   |
LL | pub struct Floats5 {
   | ^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:55:1
   |
LL | pub struct FloatAgg1 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:62:1
   |
LL | pub struct FloatAgg2 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:69:1
   |
LL | pub struct FloatAgg3 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:77:1
   |
LL | pub struct FloatAgg4 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:84:1
   |
LL | pub struct FloatAgg5 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:92:1
   |
LL | pub struct FloatAgg6 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:100:1
   |
LL | pub struct FloatAgg7 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:109:1
   |
LL | pub struct A {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:115:1
   |
LL | pub struct B {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:123:1
   |
LL | pub struct C {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:130:1
   |
LL | pub struct D {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:136:1
   |
LL | pub struct E {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:143:1
   |
LL | pub struct F {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:150:1
   |
LL | pub struct G {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(1 bytes) }
  --> $DIR/reprc-power-alignment.rs:160:1
   |
LL | pub struct H {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(1 bytes) }
  --> $DIR/reprc-power-alignment.rs:170:1
   |
LL | pub struct I {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(1 bytes) }
  --> $DIR/reprc-power-alignment.rs:181:1
   |
LL | pub struct J {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:188:1
   |
LL | pub struct K {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:198:1
   |
LL | pub struct L {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:205:1
   |
LL | pub struct M {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:213:1
   |
LL | pub union Union {
   | ^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:223:1
   |
LL | pub enum Enum {
   | ^^^^^^^^^^^^^

error: aborting due to 27 previous errors

